# OpenCLProg2024

./: .gitignore  CMakeLists.txt  Setup.cpp  Setup.h  before.cpp  image_kernel.cl  main.cpp  opencv.cpp  utils.h
kernels/: dilation_kernel.cl  ycbcr_kernel.cl
